Make sure stopped spinner stay visible
This demo needs stopped spinners to be visible,
so the user can interact with them.

--- a/demos/gtk-demo/dnd.css
+++ b/demos/gtk-demo/dnd.css
@@ -1,6 +1,3 @@
-demo {
-  background: red;
-  border: 1px solid black;
-  min-width: 30px;
-  min-height: 30px;
+spinner.demo {
+  opacity: 1;
 }
